--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@ a {
 html,
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-family: 'Pretendard';
     font-weight: 400;
 
