--- a/css/media.css
+++ b/css/media.css
@@ -134,12 +134,12 @@
 
     article.portfolio-tablet {
         display: block;
-        padding: 80px 0;
+        padding: 40px 0;
         width: 100%;
         height: 100%;
         background: url(../image/asset_bg.jpg) center /cover;
         box-sizing: border-box;
-        outline: 5px solid red;
+
     }
 
 
@@ -165,21 +165,23 @@
     }
 
     .portfolio-tablet .content-des .mySwiper {
-        overflow: visible;
         display: flex;
     }
 
     .content-des .mySwiper .content-box {
-
         display: flex;
         justify-content: center;
-        width: 280px !important;
+        width: 280px;
         height: 346px;
         box-sizing: border-box;
         border-radius: 16px;
-
         overflow: hidden;
-        margin-bottom: 80px;
+        margin: 80px 0;
+    }
+
+    .content-des .mySwiper .content-box.on {
+        transform: translateY(-20px);
+        transition: 0.3s;
     }
 
     .content-des .mySwiper .con {
@@ -195,18 +197,15 @@
         box-sizing: border-box;
     }
 
-    .swiper-slide.on {
-        transform: translateY(-50px);
-        transition: 0.3s;
-    }
-
     .portfolio-tablet .content-des .swiper-pagination.bar {
         background: rgba(255, 255, 255, 0.3);
         display: block;
-        width: 50%;
+        position: absolute;
+        width: 500px;
         left: 50%;
         transform: translateX(-50%);
-        top: 100%;
+        top: 95%;
+     
     }
 
     :root {
