--- a/css/index.css
+++ b/css/index.css
@@ -523,7 +523,6 @@ article.feature nav {
     position: relative;
     left: 0;
     top: 0;
-    z-index: 5;
 }
 
 article.feature nav ul {
@@ -560,58 +559,66 @@ article.feature nav ul li a {
     font-weight: 700;
 }
 
+
+/***************************성장성 */
 article.feature #growth {
     width: 100%;
-    padding-bottom: 120px;
+    padding: 120px 0;
     position: relative;
     /* 스와이퍼 기준 */
+
     overflow: hidden;
 }
 
-/*  */
-article.feature #growth .inner {
+article.feature .inner {
     display: flex;
     flex-direction: row;
 }
 
-article.feature #growth .growth-media {
+article.feature .media {
     width: 50%;
 }
 
-#growth .growth-media .title {
+.feature .media .title {
     color: #fff;
     margin: 80px 0 60px;
 }
 
-#growth .growth-media .title h2 {
+.feature .media .title h2 {
     font-size: 3rem;
     font-weight: 800;
     margin-bottom: 24px;
 }
 
-#growth .growth-media .title p {
+.feature .media .title p {
     font-size: 1.5rem;
     font-weight: 800;
 }
 
-#growth .growth-des {
-    width: 50%;
-    /*.star 기준 */
+.feature .media .sub-media iframe {
+    width: 464px;
+    height: 260px;
 }
 
-.growth-des .swiper {
+/****************스와이퍼 *****************/
+.feature .content-wrap {
     width: 50%;
-    height: 100%;
+}
+
+.feature .content-wrap .swiper {
+    width: 50%;
     position: absolute;
     left: 50%;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-bottom: 80px;
 }
 
-.growth-des .swiper-slide {
+.content-wrap .swiper-slide {
     display: flex;
 }
 
-.growth-des .mySwiper2 .swiper-slide {
+.content-wrap .swiper .swiper-slide {
     background-color: #fff;
     border-radius: 16px;
     width: 300px;
@@ -621,34 +628,29 @@ article.feature #growth .growth-media {
     margin-top: 80px;
 }
 
-.mySwiper2 .swiper-slide .growth-txt {
+.swiper .swiper-slide .content-txt {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.swiper-slide .growth-txt .top-txt h3 {
+.swiper-slide .content-txt .top-txt h3 {
     font-size: 1.5rem;
     font-weight: 800;
     margin-bottom: 14px;
     color: #000;
+    line-height: 0.9;
 }
 
 .swiper-slide .top-txt h3 span {
     font-size: 3rem;
+    font-weight: 800;
 }
 
 .swiper-slide .top-txt p {
     font-size: 1.5rem;
     font-weight: 600;
     color: #000;
-}
-
-.mySwiper2>p {
-    color: #fff;
-    height: 14000px;
-    position: relative;
-    z-index: 789;
 }
 
 /* 글로벌 인덱스 */
@@ -678,10 +680,11 @@ article.feature #growth .growth-media {
 
 .mySwiper2 .swiper-slide .bottom-txt {
     font-size: 1.125rem;
+    line-height: 1.33;
     color: #666;
 }
 
-.mySwiper2 .swiper-slide .bottom-txt .icon-box {
+.swiper .swiper-slide .bottom-txt .icon-box {
     width: 64px;
     height: 64px;
     position: absolute;
@@ -689,54 +692,141 @@ article.feature #growth .growth-media {
     bottom: 48px;
 }
 
-.swiper-slide .txt1 .icon-box {
+#growth .swiper-slide .txt1 .icon-box {
     background: url(../image/ic_growth1.png) no-repeat left/ auto 64px;
 }
 
-.swiper-slide-active .txt1 .icon-box {
+#growth .swiper-slide-active .txt1 .icon-box {
     background: url(../image/ic_growth1.png) no-repeat 100%/ auto 64px;
 }
 
-.swiper-slide .txt2 .icon-box {
+#growth .swiper-slide .txt2 .icon-box {
     background: url(../image/ic_growth2.png) no-repeat left/ auto 64px;
 }
 
-.swiper-slide-active .txt2 .icon-box {
+#growth .swiper-slide-active .txt2 .icon-box {
     background: url(../image/ic_growth2.png) no-repeat 100%/ auto 64px;
 }
 
-.swiper-slide .txt3 .icon-box {
+#growth .swiper-slide .txt3 .icon-box {
     background: url(../image/ic_growth3.png) no-repeat left/ auto 64px;
 }
 
-.swiper-slide-active .txt3 .icon-box {
+#growth .swiper-slide-active .txt3 .icon-box {
     background: url(../image/ic_growth3.png) no-repeat 100%/ auto 64px;
 }
 
-.growth-des .swiper-pagination {
+
+#profitability .swiper-slide .txt1 .icon-box {
+    background: url(../image/ic_profitability1.png) no-repeat left/ auto 64px;
+}
+
+#profitability .swiper-slide-active .txt1 .icon-box {
+    background: url(../image/ic_profitability1.png) no-repeat 100%/ auto 64px;
+}
+
+#profitability .swiper-slide .txt3 .icon-box {
+    background: url(../image/ic_profitability3.png) no-repeat left/ auto 64px;
+}
+
+#profitability .swiper-slide-active .txt3 .icon-box {
+    background-color: #555;
+    background: url(../image/ic_profitability3.png) no-repeat 100%/ auto 64px;
+}
+
+.content-wrap .pagination2 {
     position: absolute;
     left: 0%;
-    top: 90%;
+    top: 98%;
     width: 100%;
 }
 
-.growth-des .mySwiper2 .swiper-slide-active {
+.content-wrap .swiper .swiper-slide-active {
     transform: translateY(-20px);
     background-color: #EE7623;
-}
-
-.growth-des .mySwiper2 .swiper-slide-active h3,
-.growth-des .mySwiper2 .swiper-slide-active p,
-.growth-des .mySwiper2 .swiper-slide-active p span {
     color: #fff;
 }
 
-#growth .inner .growth-des .star {
+.content-wrap .swiper .swiper-slide-active h3,
+.content-wrap .swiper .swiper-slide-active h3 span,
+.content-wrap .swiper .swiper-slide-active p,
+.content-wrap .swiper .swiper-slide-active p span {
+    color: #fff;
+}
+
+.feature .inner .content-wrap .star {
     position: absolute;
     right: 43%;
-    bottom: 16%;
-    color: #fff;
+    bottom: 21%;
+    font-size: 1.125rem;
+    color: #888;
 }
+
+
+/* 안전성 */
+#safety {
+    position: relative;
+    padding: 160px 0;
+    width: 100%;
+    background: url(../image/feature_sec2_bg.jpg) no-repeat center/cover;
+}
+
+#safety .content-wrap .swiper {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#safety .swiper-slide .txt2 .icon-box {
+    background: url(../image/ic_stability2.png) no-repeat left/ auto 64px;
+}
+
+#safety .swiper-slide-active .txt2 .icon-box {
+    background: url(../image/ic_stability2.png) no-repeat 100%/ auto 64px;
+}
+
+.content-wrap .pagination3 {
+    position: absolute;
+    left: 0%;
+    top: 98%;
+    width: 100%;
+}
+
+
+
+
+
+/* 수익성 */
+#profitability {
+    position: relative;
+    width: 100%;
+    padding: 160px 0;
+    background: url(../image/feature_sec3_bg.jpg) no-repeat center/cover;
+}
+
+#profitability .content-wrap .swiper {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.content-wrap .pagination4 {
+    position: absolute;
+    left: 0%;
+    top: 98%;
+    width: 100%;
+}
+
+
+
+
+
+
+
 
 @keyframes move {
     0% {
