--- a/css/index.css
+++ b/css/index.css
@@ -794,10 +794,6 @@ article.feature .media {
     width: 100%;
 }
 
-
-
-
-
 /* 수익성 */
 #profitability {
     position: relative;
@@ -821,9 +817,129 @@ article.feature .media {
     width: 100%;
 }
 
+article.ir {
+    width: 100%;
+    padding: 120px 0;
+    background: url(../image/sec_ir_bg.jpg) no-repeat center/cover;
+}
 
+article.ir h2 {
+    font-size: 3rem;
+    font-weight: 800;
+    margin-bottom: 60px;
+    color: #fff;
+}
 
+article.ir .ir-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
+article.ir .ir-info .info-price {
+    width: 700px;
+    background-color: #fff;
+    border-radius: 16px;
+    padding: 48px 40px;
+    box-sizing: border-box;
+}
+
+.ir-info .info-price .price {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    padding-bottom: 20px;
+    border-bottom: 1px solid #eee;
+}
+
+.ir-info .info-price .price h3 {
+    font-weight: 800;
+    font-size: 1.5rem;
+}
+
+.ir-info .info-price .price p {
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.ir-info .info-price .ir-current {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+
+}
+
+.ir-info .info-price .ir-current>div {
+    width: 50%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 48px 12px 0;
+    color: #666;
+}
+
+.ir-info .info-price .ir-current>div>p {
+    font-size: 1.25rem;
+    font-weight: 800;
+}
+
+.ir-info .info-price .ir-current>div>p:last-child {
+    color: #999;
+}
+
+article.ir .ir-info .ir-link {
+    width: 700px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+article.ir .ir-info .ir-link .box {
+    width: 100%;
+    border: 2px solid #fff;
+    border-radius: 16px;
+    padding: 48px 40px;
+    box-sizing: border-box;
+
+    position: relative;
+}
+article.ir .ir-info .ir-link .box1:hover {
+    background: url(../image/ir_finance_bg.jpg) no-repeat center/cover;
+}
+article.ir .ir-info .ir-link .box2:hover {
+    background: url(../image/ir_stock_bg.jpg) no-repeat center/cover;
+}
+article.ir .ir-info .ir-link .box3:hover {
+    background: url(../image/ir_ir_bg.jpg) no-repeat center/cover;
+}
+
+article.ir .ir-info .ir-link .box:hover::after {
+    transform: rotate(-90deg);
+}
+
+article.ir .ir-info .ir-link .box::after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: url(../image/ic_plus.svg) no-repeat center/cover;
+    position: absolute;
+    right: 40px;
+    bottom: 48px;
+    transition: all 0.3s;
+}
+
+article.ir .ir-link .box a {
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: #fff;
+}
 
 
 
