--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,7 @@ body {
     height: 100%;
     font-family: 'Pretendard';
     font-weight: 400;
+    overflow-x: hidden;
 
     /* 스와이퍼 */
     position: relative;
@@ -190,7 +191,6 @@ header .more {
     height: 100%;
     width: 100px;
     background: #CE0E2D url(../image/ic_menu.svg) center center no-repeat;
-    flex-shrink: 1;
 }
 
 header .more p {
@@ -515,16 +515,18 @@ article.feature {
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     overflow: hidden;
+
     position: relative;
-        /* nav에 기준 */
+    /* nav에 기준 */
 }
 
 article.feature nav {
     width: 100%;
     border-bottom: 1px solid #666;
 
-/* 나중에 fixed로 변경하기 위해서 설정 */
+    /* 나중에 fixed로 변경하기 위해서 설정 */
     position: absolute;
     left: 0;
     top: 0;
@@ -585,9 +587,9 @@ article.feature>div {
 article.feature>div>.inner {
     display: flex;
     flex-direction: row;
-justify-content: space-between;
+    justify-content: space-between;
 
-    
+    position: relative;
     padding: 60px 0;
 }
 
@@ -613,11 +615,15 @@ article.feature>div>.inner>.media {
 
 .feature .media .sub-media {
     width: 100%;
-    padding-bottom: 46.5;
-    height: 0
+    padding-bottom: 46.25%;
+    height: 0;
+    position: relative;
 }
 
 .feature .media .sub-media iframe {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 464px;
     height: 260px;
 }
@@ -625,19 +631,25 @@ article.feature>div>.inner>.media {
 /****************스와이퍼 *****************/
 
 .feature>div>.inner>.content-wrap {
-    width: 50%;
+    width: 50vw;
+    height: 100%;
+    padding-top: 30px;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    overflow: hidden;
+
 }
 
-.feature>div>.inner>.content-wrap .content-wrap .swiper {
-position: relative;
-    width: 100%;
-    height: 100%;
-    
+.feature>div>.inner>.content-wrap .swiper {
+    padding-bottom: 60px;
+    position: relative;
+    overflow: visible;
 }
 
 .content-wrap .swiper .swiper-wrapper {
     margin-bottom: 60px;
-    
+    width: 100%;
 }
 
 .content-wrap .swiper .swiper-slide {
@@ -647,12 +659,12 @@ position: relative;
     height: 400px;
     padding: 48px 40px;
     box-sizing: border-box;
-    margin-top: 80px;
 }
 
 /*  상세내용 */
 .swiper .swiper-slide .content-txt {
-height: 100%;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -667,8 +679,9 @@ height: 100%;
 }
 
 .swiper-slide .top-txt h3 span {
-    font-size: 3rem;
+    font-size: 2.9rem;
     font-weight: 800;
+    line-height: 0.9;
 }
 
 .swiper-slide .top-txt p {
@@ -677,31 +690,33 @@ height: 100%;
     color: #000;
 }
 
-.swiper-slide .txt4 .top-txt {
+.myswiper2 .swiper-slide .txt4 .top-txt {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.swiper-slide .txt4 .top-txt h3 {
+.myswiper2 .swiper-slide .txt4 .top-txt h3 {
     font-size: 2rem;
     margin-bottom: 30px;
+    line-height: 0.9;
 }
 
-.swiper-slide .txt4 .top-txt p {
+.myswiper2 .swiper-slide .txt4 .top-txt p {
     font-size: 1.25rem;
     font-weight: 600;
+    line-height: 0.9;
 }
 
-.swiper-slide .txt4 .top-txt p span {
+.myswiper2 .swiper-slide .txt4 .top-txt p span {
     font-size: 1.125rem;
     font-weight: 400;
     color: #666;
     margin-top: 3px;
 }
 
-.mySwiper .swiper-slide .bottom-txt {
+.swiper .swiper-slide .bottom-txt {
     font-size: 1.125rem;
     line-height: 1.33;
     color: #666;
@@ -757,48 +772,42 @@ height: 100%;
     background: url(../image/ic_profitability3.png) no-repeat 100%/ auto 64px;
 }
 
-.content-wrap .swiper .swiper-slide-active {
+.feature .content-wrap .swiper .swiper-slide-active {
     transform: translateY(-20px);
     background-color: #EE7623;
     color: #fff;
 }
 
-.content-wrap .swiper .swiper-slide-active h3,
-.content-wrap .swiper .swiper-slide-active h3 span,
-.content-wrap .swiper .swiper-slide-active p,
-.content-wrap .swiper .swiper-slide-active p span {
+.feature .content-wrap .swiper .swiper-slide-active h3,
+.feature .content-wrap .swiper .swiper-slide-active h3 span,
+.feature .content-wrap .swiper .swiper-slide-active p,
+.feature .content-wrap .swiper .swiper-slide-active p span {
     color: #fff;
 }
 
-.content-wrap .pagination2 {
-    position: absolute;
-    left: 0%;
-    top: 99%;
-    width: 100%;
-}
-
-.content-wrap .pagination3 {
-    position: absolute;
-    left: 0%;
-    top: 99%;
-    width: 100%;
-}
-
+.content-wrap .pagination2,
+.content-wrap .pagination3,
 .content-wrap .pagination4 {
     position: absolute;
-    left: 0%;
-    top: 99%;
-    width: 100%;
-    }
+    left: 0;
+    top: 100%;
+}
 
 .feature .inner .content-wrap .star {
-        position: absolute;
+    position: absolute;
     left: 0%;
     bottom: 5%;
     font-size: 1.125rem;
     color: #888;
 }
 
+.swiper-pagination-progressbar {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+:root {
+    --swiper-theme-color: #cccc;
+}
 
 /* 안전성 */
 #safety .swiper-slide .txt2 .icon-box {
@@ -827,6 +836,7 @@ article.ir .ir-info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 20px;
 }
 
 article.ir .ir-info .info-price {
@@ -862,12 +872,10 @@ article.ir .ir-info .info-price {
     flex-direction: row;
     justify-content: space-between;
     gap: 20px;
-
 }
 
 .ir-info .info-price .ir-current>div {
     width: 50%;
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -974,8 +982,8 @@ footer .footer-logo a img {
 
 footer .footer-info p:first-child {
     font-weight: 600;
-    margin-bottom: 10px;
     font-size: 1.125rem;
+    margin-bottom: 10px;
 }
 
 footer .footer-info ul {
@@ -1017,7 +1025,6 @@ footer .privacy {
     font-size: 0.875rem;
     font-weight: 500;
     color: #999;
-
 }
 
 footer .privacy p {
