--- a/css/index.css
+++ b/css/index.css
@@ -651,6 +651,11 @@ article.feature>div>.inner>.media {
     width: 100%;
 }
 
+.swiper .swiper-wrapper:hover {
+    cursor: url(../image/ic_drag.png),auto;
+}
+
+
 .content-wrap .swiper .swiper-slide {
     background-color: #fff;
     border-radius: 16px;
@@ -803,6 +808,8 @@ article.feature>div>.inner>.media {
 .swiper-pagination-progressbar {
     background-color: rgba(255, 255, 255, 0.2);
 }
+
+
 
 :root {
     --swiper-theme-color: #cccc;
