--- a/css/media.css
+++ b/css/media.css
@@ -1,19 +1,35 @@
 @charset "utf-8";
 
 @media all and (max-width:1700px) {
-    /*     header h1.logo {
+    body {
+        width: 100%;
+    }
+
+    header h1.logo {
         margin-left: 30px;
+    }
+
+    header nav .menu {
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0px;
     }
 
     nav .menu>li {
         padding: 0 40px;
-    } */
+    }
+
+    .portfolio .content-right .con:nth-child(2n) {
+        margin-left: 320px;
+    }
 }
 
 @media all and (max-width:1400px) {
-
-    header h1.logo {
-        margin-left: 30px;
+    body {
+        width: 100%;
     }
 
     nav .menu>li {
@@ -26,6 +42,10 @@
 
     .con:nth-child(2n) {
         margin-left: 360px;
+    }
+
+    .portfolio .content-right .con:nth-child(2n) {
+        margin-left: 200px;
     }
 }
 
@@ -236,7 +256,7 @@
 
         transform: translate(-50%);
     }
-    
+
 
     :root {
         --swiper-theme-color: #cccc;
@@ -273,7 +293,6 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-
         padding: 20px 28px;
         box-sizing: border-box;
     }
@@ -530,7 +549,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 100%;
         overflow: hidden;
     }
 
