--- a/css/media.css
+++ b/css/media.css
@@ -5,6 +5,10 @@
         width: 100%;
     }
 
+    header{
+        max-width: 100%;
+    }
+
     header h1.logo {
         margin-left: 30px;
     }
@@ -32,6 +36,14 @@
         width: 100%;
     }
 
+    .inner {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+    header{
+        max-width: 100%;
+    }
+
     nav .menu>li {
         padding: 0 20px;
     }
@@ -53,6 +65,14 @@
     body {
         width: 100%;
         font-size: 0.875rem;
+    }
+
+    .inner {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+    header{
+        max-width: 100%;
     }
 
     header {
@@ -616,8 +636,17 @@
 @media all and (max-width: 768px) {
     body {
         width: 100%;
-        max-width: 768px;
     }
+
+    nav {
+        width: 100%;
+    }
+
+    .inner {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+
 
     article.banner h2 {
         width: 300px;
