--- a/css/media.css
+++ b/css/media.css
@@ -684,7 +684,7 @@
 
     header .lang {
         position: absolute;
-        right: 150px;
+        right: 90x;
         top: 50%;
         transform: translateY(-50%);
 
